--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -8,6 +8,9 @@
       <%= f.input :text, as: :text %>
       <%= f.input :image %>
       <%= f.input :image_cache, as: :hidden %>
+      <% unless @post.featured %>
+        <%= f.input :featured %>
+      <% end %>
       <%= f.button :submit, class: 'crud-button' %>
     <% end %>
   </div>
