--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -40,17 +40,17 @@
             <%= link_to t("navbar.contact"), root_path, class: 'footer-title footer-link mb16' %>
             <%#= link_to t('navbar.privacy_policy'), privacy_policy_path, class: "light-grey footer-link s-medium-text mb-2" %>
           </div>
-          <div class="footer-section">
+<!--           <div class="footer-section">
             <a href="#" role="button" id="productsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="footer-link grey footer-lang-link">
               <%= locale.capitalize %> <i class="fas fa-chevron-down small-chevron"></i>
             </a>
             <div class="dropdown-menu" aria-labelledby="productsDropdown">
               <ul class="dropdown-menu-ul">
-                <li class="d-flex align-items-center"><%= image_tag 'uk.png' %><%= link_to "English", { :locale=>'en' }, class: "dropdown-item" %></li>
-                <li class="d-flex align-items-center"><%= image_tag 'france.png' %> <%= link_to "Français", { :locale=>'fr' }, class: "dropdown-item" %></li>
+                <li class="d-flex align-items-center"><%#= image_tag 'uk.png' %><%#= link_to "English", { :locale=>'en' }, class: "dropdown-item" %></li>
+                <li class="d-flex align-items-center"><%#= image_tag 'france.png' %> <%#= link_to "Français", { :locale=>'fr' }, class: "dropdown-item" %></li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
         <p class="trademark trademark-mobile">© Foenix Coding</p>
       </div>
