--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -90,17 +90,17 @@
     <div class="navbar-item">
       <%= link_to t("navbar.contact"), contact_path, class: "navbar-title nav-right"  %>
     </div>
-    <div class="navbar-item">
+<!--     <div class="navbar-item">
       <a href="#" role="button" id="productsDropdown" class="navbar-lang-link nav-right"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <%= locale.capitalize %> <i class="fas fa-chevron-down small-chevron"></i>
       </a>
       <div class="dropdown-menu" aria-labelledby="productsDropdown">
         <ul class="dropdown-menu-ul">
-          <li><%= image_tag 'uk.png' %><%= link_to "English", { :locale=>'en' } %></li>
-          <li><%= image_tag 'france.png' %> <%= link_to "Français", { :locale=>'fr' } %></li>
+          <li><%#= image_tag 'uk.png' %><%#= link_to "English", { :locale=>'en' } %></li>
+          <li><%#= image_tag 'france.png' %> <%#= link_to "Français", { :locale=>'fr' } %></li>
         </ul>
       </div>
-    </div>
+    </div> -->
   </div>
   <div id="mobile-navbar">
     <i class="fas fa-bars" onclick="openNav()"></i>
