--- a/app/views/pages/distributor.html.erb
+++ b/app/views/pages/distributor.html.erb
@@ -22,10 +22,6 @@
                   <p class="paragraph-text"><%= country.name %></p>
                 </div>
               <% end %>
-              <div class="country-card" style="width: 20%;">
-                <%= image_tag 'distributor-plus-icon.png' %>
-                <p class="paragraph-text"><%= t("distributor_countries.be_the_next") %></p>
-              </div>
             </div>
           </div>
           <div class="distributor-countries-mobile">
@@ -42,6 +38,10 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="country-card hide-mobile" style="width: 20%;">
+          <%= image_tag 'distributor-plus-icon.png' %>
+          <p class="paragraph-text"><%= t("distributor_countries.be_the_next") %></p>
         </div>
       </div>
       <div class="distributor-see-more">
